k8s/04-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-backend-deployment
  namespace: mernstack
  labels:
    app: ecommerce-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-backend
  template:
    metadata:
      labels:
        app: ecommerce-backend
    spec:
      containers:
      - name: ecommerce-backend
        image: onkar1817/trendify-ecommerce-backend:latest        
        ports:
        - containerPort: 5000
        resources:
          requests: # minimum resource requirement
            cpu: 10m # 0.01 Cores of CPU
            memory: 64Mi # 67 Mb of RAM

          limits: # maximum resource requirement
            cpu: 250m # 0.25 Cores of CPU
            memory: 128Mi
