k8s/07-mongodb.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mongodb
  namespace: trendify
  labels:
    app: ecommerce-mongodb

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-mongodb
  serviceName: mongodb
  template:
    metadata:
      labels:
        app: ecommerce-mongodb

    spec:
      containers:
      - name: mongo
        image: mongo:7
        ports:
        - containerPort: 27017
          name: mongodb
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 1000m
            memory: 2Gi
        volumeMounts:
        - name: mongodata
          mountPath: /data/db
        
        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - mongosh --quiet --eval "db.adminCommand('ping')"
        readinessProbe:
         exec:
            command:
              - /bin/sh
              - -c
              - mongosh --quiet --eval "db.adminCommand('ping')"
  volumeClaimTemplates:
  - metadata:
      name: mongodata
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "manual"
      resources:
        requests:
          storage: 0.5Gi
