k8s/03-frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: trendify

spec:
  selector:
    app: ecommerce-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 # container port
