k8s/08-mongodb-service.yml
kind: Service
apiVersion: v1
metadata:
  name: mongodb
  namespace: trendify

spec:
  selector:
    app: ecommerce-mongodb

  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
