k8s/10-backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: trendify

spec:
  selector:
    app: ecommerce-backend

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000 # container port
