k8s/12-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: trendify-ingress
  namespace: trendify

spec:
  ingressClassName: nginx

  rules:
    - host: trendify.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
